# RemoteDeviceMonitoring

./: CMakeLists.txt  README.md
Include/: Common.hpp
Src/: Device.cpp  MonitoringServer.cpp
